fix: type wrap and var inject desc

--- a/src/styles/checkinput.less
+++ b/src/styles/checkinput.less
@@ -373,7 +373,7 @@
     }
   }
 
-  &-radio-wrap {
+  &-radio + span {
     color: @radio-text-color;
   }
 }
